deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-stage
  labels:
    app: hello-world-stage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world-stage
  template:
    metadata:
      labels:
        app: hello-world-stage
    spec:
      containers:
      - name: hello-world-stage
        image: ghcr.io/eu-resonance/hello-world-stage:latest
        ports:
        - containerPort: 5000
      imagePullSecrets:
      - name: regcred
