service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-stage
spec:
  selector:
    app: hello-world-stage
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: LoadBalancer
