ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-application-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /flask-hello-world-stage
        pathType: Prefix
        backend:
          service:
            name: hello-world-stage
            port:
              number: 5000
